// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCard Component should toggle the stats card on click 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="orisa icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b />
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            NaN
            %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroCard Component should toggle the stats card on click 2`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="orisa icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b />
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            NaN
            %
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "75%",
              }
            }
          />
        </div>
        <div>
          Eliminations
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "45%",
              }
            }
          />
        </div>
        <div>
          K/D ratio
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "50%",
              }
            }
          />
        </div>
        <div>
          Accuracy
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "23%",
              }
            }
          />
        </div>
        <div>
          Blocked
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "8%",
              }
            }
          />
        </div>
        <div>
          Healing
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "65%",
              }
            }
          />
        </div>
        <div>
          Damage
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "65%",
              }
            }
          />
        </div>
        <div>
          Obj. Kills
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
           / min 
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "65%",
              }
            }
          />
        </div>
        <div>
          Obj. Time
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroCard Component should toggle the stats card on click 3`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="orisa icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b />
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            NaN
            %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
